# financial-email

./: Dockerfile  README.md  baseline.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py  data.json  environment.py
