[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-email"
version = "1.0.0"
description = "Financial Email Triage RL Environment built on OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ram2310" }
]
keywords = ["openenv", "reinforcement-learning", "financial", "email", "triage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/ram2310/financial-email"
"Repository" = "https://github.com/thulasiramk-2310/financial-email"
