[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-email"
version = "1.0.0"
description = "Financial Email Triage RL Environment built on OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ram2310" }]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/ram2310/financial-email"
Repository = "https://github.com/thulasiramk-2310/financial-email"